<resources>
    <string name="app_name">Flo</string>
    <string name="first_line">좋아할만한 최신 앨범  ></string>
    <string name="newest_first_album_title">Help (이디오테잎 Remix)</string>
    <string name="newest_first_album_singer">"혁오 &amp; 이디오테잎"</string>
    <string name="newest_second_album_title">"[Tint ; 002]\nEmperador"</string>
    <string name="newest_second_album_singer">"소향 &amp; 캡틴플래닛"</string>
    <string name="newest_third_album_title">4.5</string>
    <string name="newest_third_album_singer">10cm</string>
    <string name="second_line">오늘 발매 음악  ></string>
    <string name="today_first_album_title">꿈에서 걸려온 전화</string>
    <string name="today_first_album_singer">김뜻돌</string>
    <string name="today_second_album_title">다음에 봐</string>
    <string name="today_second_album_singer">에이민 &amp; 뎁트</string>
    <string name="today_third_album_title">im your xYz</string>
    <string name="today_third_album_singer">용용 (Yong Yong)</string>
    <string name="third_line">낮에 듣기 좋은 음악</string>
    <string name="noon_first_album">"지금 들어도 신나는\n8090 팝송"</string>
    <string name="noon_second_album">휴식엔 따뜻한 알앤비\n음악</string>
    <string name="forth_line">나를 위한 새로운 발견</string>
    <string name="fifth_line">좋아할만한 아티스트 MIX</string>
    <string name="pop">"해외 팝\n추천 음악\n\n\n09.28"</string>
    <string name="electronic">"해외 일렉트로닉\n추천 음악\n\n\n09.28"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>