<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/viewpager"
                android:layout_width="wrap_content"
                android:layout_height="430dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_line"
                android:textColor="#000000"
                android:textSize="25dp"/>

            <!-- 좋아할만한 최신 앨범 목록 -->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <com.professionalandroid.apps.flo.AlbumCustomView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcimage="@drawable/help"
                        app:title="@string/newest_first_album_title"
                        app:singer="@string/newest_first_album_singer"/>


                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_background" >

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_line"
                android:textColor="#000000"
                android:textSize="25dp"/>


            <!-- 오늘의 발매 음악 -->


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.professionalandroid.apps.flo.AlbumCustomView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:singer="@string/today_first_album_singer"
                        app:srcimage="@drawable/callfromdream"
                        app:title="@string/today_first_album_title" />


                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_line"
                android:textColor="#000000"
                android:textSize="25dp"/>

            <!-- 낮에 듣기 좋은 음악 -->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >


                    <com.professionalandroid.apps.flo.AlbumCustomView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcimage="@drawable/emotions"
                        app:title="@string/pop_song" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forth_line"
                android:textColor="#000000"
                android:textSize="25dp"/>

            <!-- 낮에 듣기 좋은 음악 -->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            app:cardCornerRadius="10dp"
                            app:cardUseCompatPadding="true"
                            app:cardBackgroundColor="#418868">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="360dp"
                            android:layout_height="wrap_content"
                            android:weightSum="2"

                            >
                            <TextView
                                android:layout_margin="20dp"
                                android:layout_width="wrap_content"
                                android:layout_height="80dp"
                                android:layout_weight="1"
                                android:text="RoundedImageView + CardView 예제" />

                                <com.makeramen.roundedimageview.RoundedImageView
                                    android:id="@+id/imageview_main_image2"
                                    android:layout_width="match_parent"
                                    android:layout_height="180dp"
                                    android:layout_weight="1"
                                    android:scaleType="fitEnd"
                                    app:riv_corner_radius_bottom_right="10dp"
                                    app:riv_corner_radius_top_right="10dp"
                                    android:src="@drawable/emotions"
                                    app:riv_border_color="#333333"
                                    app:riv_mutate_background="true"
                                    app:riv_oval="false" />


                        </LinearLayout>
                        </androidx.cardview.widget.CardView>

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            app:cardCornerRadius="10dp"
                            app:cardUseCompatPadding="true"
                            app:cardBackgroundColor="#C82159">

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="360dp"
                                android:layout_height="wrap_content"
                                android:weightSum="2"

                                >
                                <TextView
                                    android:layout_margin="20dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="80dp"
                                    android:layout_weight="1"
                                    android:text="RoundedImageView + CardView 예제" />

                                <com.makeramen.roundedimageview.RoundedImageView
                                    android:id="@+id/imageview_main_image3"
                                    android:layout_width="match_parent"
                                    android:layout_height="180dp"
                                    android:layout_weight="1"
                                    android:scaleType="fitEnd"
                                    app:riv_corner_radius_bottom_right="10dp"
                                    app:riv_corner_radius_top_right="10dp"
                                    android:src="@drawable/emotions"
                                    app:riv_border_color="#333333"
                                    app:riv_mutate_background="true"
                                    app:riv_oval="false" />


                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                    </FrameLayout>


                </LinearLayout>
            </HorizontalScrollView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fifth_line"
                android:textSize="25dp"
                android:textColor="#000000"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">
        <LinearLayout
            android:id="@+id/play_status_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="9"
            android:background="#000000"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/navigation_bar">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="프로포즈"
                    android:textColor="#ffffff"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="길구봉구"
                    android:textColor="#ffffff"/>


            </LinearLayout>
                <ImageButton
                    android:id="@+id/previous"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_flo_previous_foreground"
                    android:background="#000000"
                    android:scaleType="centerCrop"/>
                <ImageButton
                    android:id="@+id/play"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/image_state_change"
                    android:background="#000000"
                    android:scaleType="centerCrop"
                    android:focusableInTouchMode="true" />

                <ImageButton
                    android:id="@+id/next"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_flo_next_foreground"
                    android:background="#000000"
                    android:scaleType="centerCrop"/>
                <ImageButton
                    android:id="@+id/playlist"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_flo_playlist_foreground"
                    android:background="#000000"
                    android:scaleType="centerCrop"/>


        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:menu="@menu/my_navigation_items"
            app:itemIconTint="@drawable/menu_selector_color"
            app:itemTextColor="@drawable/menu_selector_color"
            app:layout_constraintTop_toBottomOf="@id/play_status_bar"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
